Implementación básica de UI (Form) (Rebase 5 commits)

--- a/Catalogo de CDROM MySQL y SQLite/GUI_win32/GUI_win32.csproj
+++ b/Catalogo de CDROM MySQL y SQLite/GUI_win32/GUI_win32.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{C6232D99-B2A4-434B-A3D7-3FC8BED645B7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GUI_win32</RootNamespace>
+    <RootNamespace>App_CatalogoCD</RootNamespace>
     <AssemblyName>GUI_win32</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -75,6 +75,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
